# oci-rvtools-cost-estimator

./: .gitignore  DEV_NOTES.md  Dockerfile  LICENSE  README.md  demo.cast  easy-release-publish  oci-rvtools-cost-estimator.py  pyproject.toml
.github/workflows/: docker-publish.yml  github-release.yml  homebrew-publish.yml  pages-deploy.yml  pypi-publish.yml  update-prices.yml
Docker/: entrypoint.sh
Formula/: oci-rvtools.rb
docs/: CNAME  core.py  index.html  manifest.json  prices.json  security.html
docs/darkside/: index.html
oci_rvtools/: __init__.py  __main__.py  anonymize.py  cli.py  compute.py  core.py  ingest.py  log.py  model.py  osmatch.py  pricing.py  shapes.py  version.py
oci_rvtools/data/: shapes.json
oci_rvtools/report/: __init__.py  columns.py  cost_summary.py  os_summary.py  styles.py  vm_details.py  workbook.py
tests/: test_anonymize.py  test_compute.py  test_excel.py  test_ingest.py  test_osmatch.py  test_pricing.py  test_shapes.py
