[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-rvtools"
version = "1.0.9"
description = "Convert RVTools Excel exports into an Oracle Cloud (OCI) monthly cost estimate workbook."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
]
keywords = ["oci", "oracle", "rvtools", "vmware", "cloud", "cost", "estimator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kimtholstorf/oci-rvtools-cost-estimator"
Repository = "https://github.com/kimtholstorf/oci-rvtools-cost-estimator"

[project.scripts]
oci-rvtools = "oci_rvtools:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oci_rvtools*"]
